--- a/.github/workflows/Gradle CI.yml
+++ b/.github/workflows/Gradle CI.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 11
+          cache: 'gradle'
       
       # Validate Gradle Wrapper
       - name: Gradle Wrapper Validation
